crates/visionclaw-contracts/tests/snapshots/schema_stability__snapshot_agent_action_minimal.snap
---
source: tests/schema_stability.rs
expression: env
---
{
  "type": "visionclaw:agent-action",
  "schema_version": 1,
  "message_id": "00000000-0000-4000-8000-000000000000",
  "issued_at_ms": 1715856000000,
  "issued_by_pubkey": "npub1example",
  "kind": "open_panel",
  "agent_id": "agent-abc",
  "node_class": "agent"
}
