crates/visionclaw-contracts/tests/snapshots/schema_stability__snapshot_enterprise_membership_change.snap
---
source: tests/schema_stability.rs
expression: env
---
{
  "schema_version": 1,
  "issued_at_ms": 1715856020000,
  "type": "membership_change",
  "payload": {
    "npub": "npub1example",
    "org_id": "org-1",
    "action": "joined"
  }
}
