crates/visionclaw-contracts/tests/snapshots/schema_stability__snapshot_enterprise_role_change.snap
---
source: tests/schema_stability.rs
expression: env
---
{
  "schema_version": 1,
  "issued_at_ms": 1715856020000,
  "type": "role_change",
  "payload": {
    "npub": "npub1example",
    "new_role": "operator"
  }
}
