crates/visionclaw-contracts/tests/snapshots/schema_stability__snapshot_enterprise_session_revoked.snap
---
source: tests/schema_stability.rs
expression: env
---
{
  "schema_version": 1,
  "issued_at_ms": 1715856020000,
  "type": "session_revoked",
  "payload": {
    "bridge_id": "bridge-uuid-1"
  }
}
