crates/visionclaw-contracts/tests/snapshots/schema_stability__snapshot_parse_error_report.snap
---
source: tests/schema_stability.rs
expression: r
---
{
  "path": "broken.md",
  "sha": "deadbeef",
  "error_kind": "ontology-block",
  "message": "missing @type"
}
